[gd_scene load_steps=7 format=3 uid="uid://l25qph12k0uo"]

[ext_resource type="Theme" uid="uid://dbvmo5viem8os" path="res://UI/withering_menu.tres" id="1_st65t"]
[ext_resource type="Script" path="res://InventoryManagers/plant_shop_menu.gd" id="2_ms45m"]
[ext_resource type="PackedScene" uid="uid://tkpls1e0smis" path="res://World/Interactables/Plant_shop_inventory_list.tscn" id="3_t8mja"]
[ext_resource type="PackedScene" uid="uid://cqndqk3iydtcb" path="res://World/Interactables/selected_shop_scroll_container.tscn" id="4_gx80j"]

[sub_resource type="LabelSettings" id="LabelSettings_3aja0"]
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_0wmcg"]
font_size = 8

[node name="PlantShopMenu" type="Control" groups=["inventory_menus"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -16.0
offset_right = -73.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_st65t")
script = ExtResource("2_ms45m")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 150.0
offset_bottom = 118.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="HeaderLabel" type="Label" parent="PanelContainer/MarginContainer"]
layout_mode = 2
text = "Leyla's Plant Shop"
label_settings = SubResource("LabelSettings_3aja0")

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_top = 13

[node name="WelcomeLabel" type="Label" parent="PanelContainer/MarginContainer2"]
layout_mode = 2
text = "\"Welcome, what can I get you?\""
label_settings = SubResource("LabelSettings_0wmcg")

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/margin_bottom = 12

[node name="BuyButton" type="Button" parent="PanelContainer/MarginContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
disabled = true
text = "Buy Selected"

[node name="MarginContainer4" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 2
theme_override_constants/margin_right = 0

[node name="RecipeScrollContainer" parent="PanelContainer/MarginContainer4" instance=ExtResource("3_t8mja")]
layout_mode = 2

[node name="MarginContainer5" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/margin_right = 2

[node name="SelectedShopScrollContainer" parent="PanelContainer/MarginContainer5" instance=ExtResource("4_gx80j")]
layout_mode = 2

[connection signal="pressed" from="PanelContainer/MarginContainer3/BuyButton" to="." method="_on_start_button_pressed" flags=18]
